k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-api

  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /api/v1/q/metrics
        prometheus.io/port: "8080"
      labels:
        app: product-api

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - name: product-api
        image: ghcr.io/apchavez/product-api:sha-3ca05ed7b61c81b73d23b654c10b6bc939ba9a8b
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /api/v1/q/health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /api/v1/q/health/ready
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3

        startupProbe:
          httpGet:
            path: /api/v1/q/health/live
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
